[package]
name = "r-limited-sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.177", features = ["derive"] }
thiserror = "1.0.44"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]